src/Moneta.Frontend.Web/01.web/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: moneta
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - jellebens.ddns.net
    #tls:
    #  httpsRedirect: false  # sends 301 redirect for http requests
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: noip-tls-cert-v1
    hosts:
    - jellebens.ddns.net
